make the credit link fancy

--- a/Theme.html
+++ b/Theme.html
@@ -35,7 +35,7 @@
         <meta name="theme-color" content="{block:IfCustomColors}{color:Background}{/block:IfCustomColors}{block:IfNotCustomColors}{BackgroundColor}{/block:IfNotCustomcolors}">
         <link rel="alternate" type="application/rss+xml" href="{RSS}">
         <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/Vf7pfceur/normalize.css">
-        <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/Fcvql2vp2/vision_core.css">{block:IfNotBackgroundImage}
+        <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/aoIql4tfs/vision_core.css">{block:IfNotBackgroundImage}
         <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/KyGpnia7z/vision_plain.css">{/block:IfNotBackgroundImage}
         <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/EJxpafak4/socicon.css">
         {PostTypographyStyles}
@@ -251,6 +251,9 @@
             </main>
             <aside></aside>
         </div>
-        <a href="https://www.tumblr.com/theme/40627" title="Vision by April Sylph"><img src="https://static.tumblr.com/2wliono/2E5oic9yz/tiny.png" id="credit" alt="Vision by April Sylph"></a>
+        <a id="credit" href="https://www.tumblr.com/theme/40627">
+            <span>{lang:Install this theme}</span>
+            <img src="https://static.tumblr.com/2wliono/2E5oic9yz/tiny.png" alt="">
+        </a>
     </body>
 </html>
