use NewPostStyles (update from PostTypographyStyles)

--- a/Theme.html
+++ b/Theme.html
@@ -38,7 +38,7 @@
         <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/aoIql4tfs/vision_core.css">{block:IfNotBackgroundImage}
         <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/KyGpnia7z/vision_plain.css">{/block:IfNotBackgroundImage}
         <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/EJxpafak4/socicon.css">
-        {PostTypographyStyles}
+        {NewPostStyles}
         <style id="vision_dynamic">
             :root {
                 --background: {block:IfCustomColors}{color:Background}{/block:IfCustomColors}{block:IfNotCustomcolors}{BackgroundColor}{/block:IfNotCustomcolors};
