change default page font to Favorit

--- a/Theme.html
+++ b/Theme.html
@@ -12,7 +12,7 @@
     <meta name="color:Background" content="{BackgroundColor}">
     <meta name="color:Text" content="{TitleColor}">
     <meta name="color:Links" content="{AccentColor}">
-    <meta name="font:Font" content="Helvetica">
+    <meta name="font:Font" content="Favorit">
     <meta name="if:Custom Colors" content="0">
     <meta name="if:Show Username" content="1">
     <meta name="if:Sidebar Pagination" content="0">
