--- a/Theme.html
+++ b/Theme.html
@@ -31,7 +31,7 @@
         <meta name="theme-color" content="{block:IfCustomColors}{color:Background}{/block:IfCustomColors}{block:IfNotCustomColors}{BackgroundColor}{/block:IfNotCustomcolors}">
         <link rel="alternate" type="application/rss+xml" href="{RSS}">
         <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/Vf7pfceur/normalize.css">
-        <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/41dqlc02f/vision_core.css">{block:IfNotBackgroundImage}
+        <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/Exeqlc3b6/vision_core.css">{block:IfNotBackgroundImage}
         <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/KyGpnia7z/vision_plain.css">{/block:IfNotBackgroundImage}
         {NewPostStyles}
         <noscript>
@@ -97,7 +97,10 @@
                         <img id="avatar" src="{PortraitURL-64}" class="{AvatarShape}">{/block:ShowAvatar}{block:ShowTitle}
                         <h1 id="title">{Title}</h1>{/block:ShowTitle}
                     </a>{block:ShowDescription}
-                    <div id="description">{Description}</div>{/block:ShowDescription}
+                    <div id="description">{Description}</div>{/block:ShowDescription}{block:HasHighlightedPosts}
+                    <div id="top-photos" aria-label="{lang:Top Photos}">{block:HighlightedPosts}
+                        <a href="{Permalink}" target="_blank"><img src="{PhotoURL-250}"></a>{/block:HighlightedPosts}
+                    </div>{/block:HasHighlightedPosts}
                     <nav>{block:AskEnabled}
                         <a href="/ask">{AskLabel}</a>{/block:AskEnabled}{block:SubmissionsEnabled}
                         <a href="/submit">{SubmitLabel}</a>{/block:SubmissionsEnabled}
