only hide tag-filtered posts on homepage, not any index page

--- a/Theme.html
+++ b/Theme.html
@@ -70,10 +70,10 @@
             }
             .ask-item > div {
                 background: rgba(var(--rgbtitle), 0.1);
-            }{/block:IfBackgroundImage}{block:IfHidePostsTagged}{block:IndexPage}
+            }{/block:IfBackgroundImage}{block:IfHidePostsTagged}{block:HomePage}
             article.{text:Hide Posts Tagged} {
                 display: none;
-            }{/block:IndexPage}{/block:IfHidePostsTagged}
+            }{/block:HomePage}{/block:IfHidePostsTagged}
         </style>
         <style title="Custom CSS">{CustomCSS}</style>
     </head>
