make credit link obey "Open links in new window" setting

--- a/Theme.html
+++ b/Theme.html
@@ -237,7 +237,7 @@
             </main>
             <aside></aside>
         </div>
-        <a id="credit" href="https://www.tumblr.com/theme/40627">
+        <a id="credit" href="https://www.tumblr.com/theme/40627" {Target}>
             <span>{lang:Install this theme}</span>
             <img src="https://static.tumblr.com/2wliono/2E5oic9yz/tiny.png" alt="">
         </a>
