don't open highlighted posts in new tab

--- a/Theme.html
+++ b/Theme.html
@@ -97,7 +97,7 @@
                     </a>{block:ShowDescription}
                     <div id="description">{Description}</div>{/block:ShowDescription}{block:HasHighlightedPosts}
                     <div id="top-photos" aria-label="{lang:Top Photos}">{block:HighlightedPosts}
-                        <a href="{Permalink}" target="_blank"><img src="{PhotoURL-250}"></a>{/block:HighlightedPosts}
+                        <a href="{Permalink}"><img src="{PhotoURL-250}"></a>{/block:HighlightedPosts}
                     </div>{/block:HasHighlightedPosts}
                     <nav>
                         <a href="/">{lang:Home}</a>{block:AskEnabled}
