--- a/Theme.html
+++ b/Theme.html
@@ -18,7 +18,7 @@
         <meta name="theme-color" content="{BackgroundColor}">
         <link rel="alternate" type="application/rss+xml" href="{RSS}">
         <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/Vf7pfceur/normalize.css">
-        <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/c04qp1al4/vision_core.css">{block:IfNotBackgroundImage}
+        <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/w0daeoc/wlpqpt6dv/vision_core.css">{block:IfNotBackgroundImage}
         <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/KyGpnia7z/vision_plain.css">{/block:IfNotBackgroundImage}
         {NewPostStyles}
         <noscript>
@@ -30,12 +30,11 @@
         </noscript>
         <style id="vision_dynamic">
             :root {
-                --background: {BackgroundColor};
-                --rgbtitle: {RGBTitleColor};
-                --rgbaccent: {RGBAccentColor};
+                --background: {RGBBackgroundColor};
+                --title: {RGBTitleColor};
+                --accent: {RGBAccentColor};
                 --title-font: {TitleFont};
                 --title-font-weight: {TitleFontWeight};
-
                 --font-family: {font:Font};
             }
             aside nav a[href="/ask"]:empty::before {
@@ -48,29 +47,29 @@
                 background-image: url('{image:Background}');
             }{/block:IfBackgroundImage}
             a{block:IfBackgroundImage}, span.reblog-icon, .like_button, .reblog_button{/block:IfBackgroundImage} {
-                color: var(--accent);
+                color: rgb(var(--accent));
             }{block:IfBackgroundImage}
             blockquote,
             li.note .answer_content {
-                border-color: rgba(var(--rgbtitle), 0.5);
+                border-color: rgba(var(--title), 0.5);
             }
             article {
-                background-color: var(--background);
+                background-color: rgb(var(--background));
             }
             .npf-link-block a {
-                color: var(--title);
+                color: rgb(var(--title));
             }
             .npf-link-block .bottom > .site-name {
-                color: rgba(var(--rgbtitle), 0.5);
+                color: rgba(var(--title), 0.5);
             }
             section.body .reblog .user .username {
-                color: var(--title);
+                color: rgb(var(--title));
             }
             section.body .reblog + .reblog {
-                border-color: rgba(var(--rgbtitle), 0.1);
+                border-color: rgba(var(--title), 0.1);
             }
             .ask-item > div {
-                background: rgba(var(--rgbtitle), 0.1);
+                background: rgba(var(--title), 0.1);
             }{/block:IfBackgroundImage}
         </style>
         <style title="Custom CSS">{CustomCSS}</style>
