remove unnecessary identifiers from inline style elements

--- a/Theme.html
+++ b/Theme.html
@@ -27,7 +27,7 @@
                 }
             </style>
         </noscript>
-        <style id="vision_dynamic">
+        <style>
             :root {
                 --background: {RGBBackgroundColor};
                 --title: {RGBTitleColor};
@@ -46,7 +46,7 @@
                 background-image: url('{image:Background}');
             }{/block:IfBackgroundImage}
         </style>
-        <style title="Custom CSS">{CustomCSS}</style>
+        <style>{CustomCSS}</style>
     </head>
     <body>
         <div id="base-container">
