force Tumblr to display all colour options

--- a/Theme.html
+++ b/Theme.html
@@ -29,9 +29,9 @@
         </noscript>
         <style>
             :root {
-                --background: {RGBBackgroundColor};
-                --title: {RGBTitleColor};
-                --accent: {RGBAccentColor};
+                --background: {RGBBackgroundColor}; /* {BackgroundColor} */
+                --title: {RGBTitleColor}; /* {TitleColor} */
+                --accent: {RGBAccentColor}; /* {AccentColor} */
                 --title-font: {TitleFont};
                 --title-font-weight: {TitleFontWeight};
                 --font-family: {font:Font};
