--- a/Theme.html
+++ b/Theme.html
@@ -18,7 +18,7 @@
         <meta name="theme-color" content="{BackgroundColor}">
         <link rel="alternate" type="application/rss+xml" href="{RSS}">
         <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/Vf7pfceur/normalize.css">
-        <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/wyeqqtzkq/vision_core.css">
+        <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/6dRqr5d1i/vision_core.css">
         {NewPostStyles}
         <noscript>
             <style>
@@ -185,7 +185,7 @@
                             <a href="{TagURL}" class="tag">{Tag}</a>{/block:Tags}
                         </section>{/block:HasTags}
                         <section class="controls">{block:NoteCount}
-                            <a href="{Permalink}#notes" class="notecount">{NoteCountWithLabel}</a>{/block:NoteCount}
+                            <a class="note-count" href="{Permalink}#notes">{NoteCountWithLabel}</a>{/block:NoteCount}
                             {LikeButton}&emsp;{ReblogButton}
                         </section>{block:PostNotes}
                         <section id="notes">
