--- a/Theme.html
+++ b/Theme.html
@@ -17,7 +17,7 @@
         <meta name="theme-color" content="{BackgroundColor}">
         <link rel="alternate" type="application/rss+xml" href="{RSS}">
         <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/Vf7pfceur/normalize.css">
-        <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/dOoqr783t/vision_core.css">
+        <link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/J13qr8xml/vision_core.css">
         {NewPostStyles}
         <noscript>
             <style>
@@ -174,11 +174,11 @@
                             {Caption}{/block:Caption}{/block:Video}{block:Answer}
                             {Answer}{/block:Answer}
                         </div>{/block:NotReblog}
-                    </section>{block:Date}
-                    <footer>{block:HasTags}
-                        <section class="tags">{block:Tags}
-                            <a href="{TagURL}" class="tag">{Tag}</a>{/block:Tags}
-                        </section>{/block:HasTags}
+                    </section>{block:HasTags}
+                    <section class="tags">{block:Tags}
+                        <a href="{TagURL}" class="tag">{Tag}</a>{/block:Tags}
+                    </section>{/block:HasTags}{block:Date}
+                    <footer>
                         <section class="controls">{block:NoteCount}
                             <a class="note-count" href="{Permalink}#notes">{NoteCountWithLabel}</a>{/block:NoteCount}
                             {LikeButton}&emsp;{ReblogButton}
